# dodge-r

./: .gitignore  Cargo.toml  README.md  build-commands.txt
dodge-the-creeps/godot/: Benchmark.tscn  Hud.tscn  Main.tscn  Mob.tscn  Player.tscn  icon.png.import  project.godot  rust.gdextension
dodge-the-creeps/godot/art/: House In a Forest Loop.ogg.import  enemyFlyingAlt_1.png.import  enemySwimming_2.png.import  gameover.wav.import  playerGrey_walk1.png.import
dodge-the-creeps/godot/art/background/: background1.png.import  background2.png.import
dodge-the-creeps/godot/art/crab/: small_complete_crab1down.png.import  small_complete_crab1right.png.import  small_complete_crab1up.png.import  small_complete_crab2down.png.import  small_complete_crab2right.png.import  small_complete_crab2up.png.import
dodge-the-creeps/godot/art/creep1/: small_complete_creep1_1.png.import  small_complete_creep1_2.png.import
dodge-the-creeps/godot/art/creep2/: small_complete_creep2_1.png.import  small_complete_creep2_2.png.import
dodge-the-creeps/godot/art/creep3/: small_complete_creep3_1.png.import  (+1 more)
dodge-the-creeps/rust/: Cargo.toml
dodge-the-creeps/rust/.cargo/: config.toml
dodge-the-creeps/rust/src/: benchmark.rs  event_bus.rs  hud.rs  lib.rs  main_scene.rs  mob.rs  player.rs  stats.rs
godot/: Main.tscn
godot/art/: enemyFlyingAlt_2.png.import  enemySwimming_1.png.import  enemyWalking_1.png.import  enemyWalking_2.png.import  playerGrey_up1.png.import  playerGrey_up2.png.import  playerGrey_walk2.png.import
godot/fonts/: Xolonium-Regular.ttf.import
rust/: Cargo.toml
