[workspace]
resolver = "2"

members = [
    "gdext/godot-bindings",
    "gdext/godot-codegen",
    "gdext/godot-ffi",
    "gdext/godot-core",
    "gdext/godot-macros",
    "gdext/godot-cell",
    "gdext/godot",
    "dodge-the-creeps/rust",

    # Godot integration
    "gdext/itest/rust",

    # utils
    "gdext/godot-fmt",
]

[profile.release]
codegen-units = 1
lto = "fat"
